--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block page_content %}
 {% from "_formhelpers.html" import render_field %}
 <form method=post>
   <dl>
@@ -6,4 +9,5 @@
   </dl>
   <p><input type=submit value=login>
 </form>
+{% endblock %}
 
