--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <title>Suggestion box</title>
+    <meta name="generator" content="Bootply" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    
+  
 
-{% import "bootstrap/wtf.html" as wtf %}
-{% block title %} Suggestion Box {% endblock %}
-
-{% block styles %}
-{{ super() }}
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-<link href="static/css/styles.css" rel="stylesheet">
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="static/js/scripts.js"></script>
-{% endblock styles %}
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+  </head>
+  <body>
 
 {% block navbar %}
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -19,10 +25,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Suggestions</a></li>
-            <li><a href="#">Comments</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="{{ url_for('register')}}">Signup</a></li>
+            <li><a href="{{ url_for('add_suggestion')}}">Suggestion</a></li>
+            <li><a href=" {{ url_for('comment')}}">Comment</a></li>
+            <li><a href="{{ url_for('logout')}} ">Logout</a></li>
           </ul>
         </div>
       </div>
@@ -35,12 +41,18 @@
     <div class="alert">
       <button type="button" class="close" data-dismiss="alert"> &times; </button>
       {{ message }}
-    <div>
+    </div>
     {% endfor %}
 {% endblock content %}
 
-{% block page_content %}
+
   <div class="col-sm-9 col-md-10 main">
+  {% block page_content %}
+  {% endblock page_content %}
   </div>
-{% endblock page_content %}
+  
+</div>
+</body>
+</html>
+
 
