--- a/templates/view_all_comments.html
+++ b/templates/view_all_comments.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
 {% block page_content %}
 {% from "_formhelpers.html" import render_field %}
