--- a/templates/login.html
+++ b/templates/login.html
@@ -1,28 +1,22 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content %}
-{% from "_formhelpers.html" import render_field %}
-
-<form method='POST'>
-	{{ form.csrf_token}}
-  <dl>
-    {{ render_field(form.username) }}
-    {{ render_field(form.password) }}
-  </dl>
-  <p><input type='submit' value='login'>
-</form>
-
-<!-- form that renders any hidden fields, including CSRF field -->
-<!--
-<form method='POST' action='/'>
-	{{ form.hidden_tag() }}
-	{{ form.username.label }} {{ form.username(size=20)}}
-	<input type='submit' value='GO'>
-</form>
--->
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12 login-form">
+			<form class="form form-horizontal" method="post" action='/login' role="form">
+				{{ form.hidden_tag() }}
+				{{ wtf.form_errors(form, hiddens="only") }}
+				<!--generate a quick form-->
+				{{ wtf.quick_form(form) }}
+			</form>
+		</div>
+	</div>
+</div>
+{% endblock %}
 <!-- display form errors if any -->
 {% if form.errors %}
 	{{ form.errors }}
 {% endif %}
-{% endblock %}
 
