--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,13 +3,38 @@
  * --------------------------------------------------
  */
 body {
-  padding-top: 50px;
-  background-color: #f5f5f5;
+  background-color: white;
+  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 footer {
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: #fff;
+   padding: 25px 0;
+   background-color: lightgray;
+   margin-bottom: 0;
+}
+
+.btn-default {
+    background-color: lightskyblue;
+}
+
+.form input {
+    margin-right: 0px;
+}
+
+/* Sidebar navigation */
+.nav-sidebar {
+  background-color: #f5f5f5;
+  margin-right: -15px;
+  margin-bottom: 20px;
+  margin-left: -15px;
+}
+.nav-sidebar > li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #428bca;
 }
 
 /*
@@ -41,37 +66,9 @@ footer {
   }
 }
 
-
-/* Sidebar navigation */
-.nav-sidebar {
-  background-color: #f5f5f5;
-  margin-right: -15px;
-  margin-bottom: 20px;
-  margin-left: -15px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a {
-  color: #fff;
-  background-color: #428bca;
-}
-
-/*
- * Main content
- */
-
-.main {
-  padding: 20px;
-  background-color: #fff;
-}
 @media (min-width: 768px) {
   .main {
     padding-right: 40px;
     padding-left: 40px;
   }
-}
-.main .page-header {
-  margin-top: 0;
 }
