--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     {% block header%}
       <header>
         <div class="text-center page-header">
-          <h1>SUGGESTION BOX</h1>
+          <h1>SUGGESTION BOX APP</h1>
         </div>
       </header>
       {% endblock %}
