--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     {% block header%}
       <header>
         <div class="text-center page-header">
-          <h1>SUGGESTION BOX</h1>
+          <h1>SUGGESTION BOX APP</h1>
         </div>
       </header>
       {% endblock %}
@@ -54,7 +54,7 @@
                 <h2 class="section-heading">The Suggestion Box App</h2>
                       <dl class="section-subheading">
                         <dt>Features</dt>
-                          <dd><b>Say it!  </b>Post suggestions</dd>
+                          <dd><b>SUGGEST IT  </b>Post suggestions</dd>
                           <dd><b>Explore:  </b>View user suggestions</dd>
                           <dd><b>Join the conversation: </b> Post comments</dd>
                           <dd><b>Engage: </b>  Up-vote or down-vote user suggestions and comments</dd>
