--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
         </div>
         <div class="col-md-4 text-center">
           <ul class="social-buttons list-inline">
-            <li><a href="#"><i class="fa fa-facebook"></i>Zuckerberg</a></li>
+            <li><a href="#"><i class="fa fa-facebook"></i>MKZ</a></li>
           </ul>
         </div>
         <div class="col-md-4 text-center">
