--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                 <h2 class="section-heading">The Suggestion Box App</h2>
                       <dl class="section-subheading">
                         <dt>Features</dt>
-                          <dd><b>SUGGEST IT  </b>Post suggestions</dd>
+                          <dd><b>SPEAK IT!  </b>Post suggestions</dd>
                           <dd><b>Explore:  </b>View user suggestions</dd>
                           <dd><b>Join the conversation: </b> Post comments</dd>
                           <dd><b>Engage: </b>  Up-vote or down-vote user suggestions and comments</dd>
